修改插件的介绍内容

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
-  "name": "Transweb 提炼知识，辅助学习的工具",
-  "description": "提炼网页内容的要点信息，生成知识卡片、可点亮的知识树(知识点思维导图，可智能出题，通过做题点亮知识点)、知识图谱、抽认卡等，帮助消化理解知识，夯实学习效果。",
+  "name": "Transweb 帮助更快理解知识，辅助学习",
+  "description": "提炼网页内容的要点信息，生成知识卡片、知识树(知识点思维导图，支持智能出题，做题点亮知识点)、知识图谱、抽认卡等，帮助消化理解知识，夯实学习效果。",
   "version": "1.0",
   "permissions": [
     "activeTab",
